# vscode-maple-material-theme

./: pyproject.toml
src/vstheme/: __init__.py
