[project]
name = "vstheme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "singularitti", email = "singularitti@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
    "webcolors>=24.11.1",
]

[project.scripts]
vstheme = "vstheme:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
